--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "GPL-2.0+",
     "version": "0.0.1",
     "require": {
-        "dpc-sdp/tide_core": "@dev",
-        "dpc-sdp/tide_media": "@dev"
+        "dpc-sdp/tide_core": "dev-feature/SDPA-3354_move-call_to_action-config as 1.2.14",
+        "dpc-sdp/tide_media": "^1.2.6"
     },
     "repositories": {
         "drupal": {
