--- a/tide_alert.info.yml
+++ b/tide_alert.info.yml
@@ -4,6 +4,7 @@ description: 'Provides Alert content type and related configuration. '
 package: Tide
 core: 8.x
 dependencies:
+  - drupal:menu_ui
   - dpc-sdp:tide_core
   - dpc-sdp:tide_media
 config_devel:
