--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SDPA-3354_move-call_to_action-config",
+        "dpc-sdp/tide_core": "dev-feature/SDPA-3354_move-call_to_action-config as 1.4.0",
         "dpc-sdp/tide_media": "^1.2.6"
     },
     "repositories": {
