--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SDPA-2794_migrate_sdp-dpc_modules as 1.5.0",
-        "dpc-sdp/tide_media": "^1.5.0"
+        "dpc-sdp/tide_core": "^1.5.4",
+        "dpc-sdp/tide_media": "^1.5.1"
     },
     "repositories": {
         "drupal": {
