--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,10 @@
     "name": "dpc-sdp/tide_alert",
     "description": "Alert content type and related configuration for Tide Drupal 8 distribution",
     "type": "drupal-module",
-    "license": "GPL-2.0+",
-    "version": "0.0.1",
+    "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "@dev",
-        "dpc-sdp/tide_media": "@dev"
+        "dpc-sdp/tide_core": "^1.5.4",
+        "dpc-sdp/tide_media": "^1.5.1"
     },
     "repositories": {
         "drupal": {
