--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^2.0.0",
-        "dpc-sdp/tide_media": "^1.5.1"
+        "dpc-sdp/tide_core": "dev-feature/SDPA-5396-drupalcore-9 as 2.0.14",
+        "dpc-sdp/tide_media": "dev-compatible-with-drupal-9 as 1.7.10"
     },
     "repositories": {
         "drupal": {
