--- a/tide_alert.info.yml
+++ b/tide_alert.info.yml
@@ -2,7 +2,7 @@ name: Tide Alert
 type: module
 description: 'Provides Alert content type and related configuration. '
 package: Tide
-core: 8.x
+core_version_requirement: ^8.9 || ^9
 dependencies:
   - drupal:menu_ui
   - dpc-sdp:tide_core
