--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
     "name": "dpc-sdp/tide_alert",
-    "description": "Alert content type and related configuration for Tide Drupal 8 distribution",
+    "description": "Alert content type and related configuration for Tide Drupal 10 distribution",
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^3.0.0",
-        "dpc-sdp/tide_media": "^3.0.0"
+        "dpc-sdp/tide_core": "dev-feature/SRM-870-d10-update",
+        "dpc-sdp/tide_media": "dev-feature/SRM-870-939-d10-update-d10"
     },
     "repositories": {
         "drupal": {
             "type": "composer",
-            "url": "https://packages.drupal.org/8"
+            "url": "https://packages.drupal.org/10"
         }
     },
     "minimum-stability": "alpha",
