--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SRM-870-d10-update",
-        "dpc-sdp/tide_media": "dev-feature/SRM-870-939-d10-update-d10"
+        "dpc-sdp/tide_core": "^4.0.0",
+        "dpc-sdp/tide_media": "^4.0.0"
     },
     "repositories": {
         "drupal": {
